--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.3",
     "firebase": "^11.0.2",
     "react": "^18.3.1",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
