--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "bootstrap": "^5.3.3",
+    "fancybox": "^3.0.1",
     "firebase": "^11.0.2",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.3.1",
+    "react-fancybox": "^0.2.5",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
