--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-fancybox": "^0.2.5",
     "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-router": "^7.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
