--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@reduxjs/toolkit": "^2.5.0",
     "bootstrap": "^5.3.3",
     "fancybox": "^3.0.1",
     "firebase": "^11.0.2",
@@ -20,8 +21,10 @@
     "react-dom": "^18.3.1",
     "react-fancybox": "^0.2.5",
     "react-h5-audio-player": "^3.10.0-rc.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.1",
     "react-slick": "^0.30.2",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -29,11 +32,15 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.10"
   }
 }
